--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <section class="header">
+    <section id="home" class="header">
         <nav>
             <a href="index.html"><img src="images/eduford_img/logo.png" alt=""></a>
             <div class="nav-links" id="navLinks">
                 <i class="fa fa-times" onclick="hideMenu()"></i>
                 <ul>
-                    <li><a href="">HOME</a></li>
-                    <li><a href="">ABOUT</a></li>
-                    <li><a href="">COURSE</a></li>
-                    <li><a href="">BLOG</a></li>
-                    <li><a href="">CONTACT</a></li>
+                    <li><a href="#home">HOME</a></li>
+                    <li><a href="#about">ABOUT</a></li>
+                    <li><a href="#course">COURSE</a></li>
+                    <li><a href="#blog">BLOG</a></li>
+                    <li><a href="#contact">CONTACT</a></li>
                 </ul>
             </div>
             <i class="fa fa-bars" onclick="showMenu()"></i>
@@ -37,7 +37,7 @@
 
     <!-------- course --------->
 
-    <section class="course">
+    <section id="course" class="course">
         <h1>Courses We Offer</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.   </p>
 
@@ -90,7 +90,7 @@
 
     <!-- Facilities -->
 
-    <section class="facilities">
+    <section id="blog" class="facilities">
         <h1>Our Facilities</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 
@@ -154,14 +154,14 @@
 
     <!-- Call to Action -->
 
-    <section class="cta">
+    <section id="contact" class="cta">
         <h1>Enroll for our various online courses <br> Anywhere from the World</h1>
         <a href="" class="hero-btn">CONTACT US</a>
     </section>
 
     <!------ footer ---- -->
 
-    <section class="footer">
+    <section id="about" class="footer">
          <h4>About Us</h4>
          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt dicta harum, consequatur maiores <br> ducimus quidem libero neque ratione obcaecati provident.</p>
          <div class="icons">
