--- a/course.html
+++ b/course.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <section class="header">
+    <section class="sub-header">
         <nav>
             <a href="index.html"><img src="images/eduford_img/logo.png" alt=""></a>
             <div class="nav-links" id="navLinks">
@@ -22,20 +22,15 @@
                     <li><a href="about.html">ABOUT</a></li>
                     <li><a href="course.html">COURSE</a></li>
                     <li><a href="blog.html">BLOG</a></li>
-                    <li><a href="contact.html">CONTACT</a></li>
+                    <li><a href="course.html">CONTACT</a></li>
                 </ul>
             </div>
             <i class="fa fa-bars" onclick="showMenu()"></i>
         </nav>
-
-    <div class="text-box">
-        <h1>World's Biggest University</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem quod hic<br> laborum placeat dolorum accusamus nulla est sit repudiandae iste.</p>
-        <a href="" class="hero-btn">Visit us To Know More</a>
-    </div>  
+         <h1>Our Courses</h1>
     </section>
 
-    <!-------- course --------->
+    <!-- course -->
 
     <section class="course">
         <h1>Courses We Offer</h1>
@@ -56,40 +51,9 @@
             </div>
         </div>
     </section>
+
+    <!-------- facilities----------- -->
  
-      <!------ campus ------>
-
-    <section class="campus">
-         <h1>Our Global Campus</h1>
-         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>  
-
-         <div class="row">
-             <div class="campus-col">
-                 <img src="images/eduford_img/london.png" alt="">
-                 <div class="layer">
-                     <h3>LONDON</h3>
-                 </div>
-             </div> 
-             
-             <div class="campus-col">
-                <img src="images/eduford_img/newyork.png" alt="">
-                <div class="layer">
-                    <h3>NEWYORK</h3>
-                </div>
-            </div>  
-
-            <div class="campus-col">
-                <img src="images/eduford_img/washington.png" alt="">
-                <div class="layer">
-                    <h3>WASHINGTON</h3>
-                </div>
-            </div>  
-         </div>
-
-    </section>
-
-    <!-- Facilities -->
-
     <section class="facilities">
         <h1>Our Facilities</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
@@ -115,49 +79,7 @@
         </div>
 
     </section>
-
-    <!-------- testimonials ------->
-
-    <section class="testimonials">
-        <h1>What Our Student Says</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-
-        <div class="row">
-            <div class="testimonial-col">
-                <img src="images/eduford_img/user1.jpg" alt="">
-                <div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam consectetur distinctio assumenda, nihil aliquid ipsum.</p>
-                    <h3>Christian Jenny</h3>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star-o"></i>
-                </div>
-            </div>
-
-            <div class="testimonial-col">
-                <img src="images/eduford_img/user2.jpg" alt="">
-                <div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam consectetur distinctio assumenda, nihil aliquid ipsum.</p>
-                    <h3>David Byer</h3>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star-half-o"></i>
-                </div>
-            </div>
-        </div>
-
-    </section>
-
-    <!-- Call to Action -->
-
-    <section class="cta">
-        <h1>Enroll for our various online courses <br> Anywhere from the World</h1>
-        <a href="" class="hero-btn">CONTACT US</a>
-    </section>
+    
 
     <!------ footer ---- -->
 
